subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    group = 'org.smither.opwatch'
    version = '0.0.0'
    repositories {
        mavenCentral()
    }
    sourceCompatibility = 11
    targetCompatibility = 11
}